deployment/istio/istio API/istio-gateway.yaml
# Шлюз Istio
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: stateful-todo-istio-gateway
  namespace: stateful-todo
spec:
  selector:
    istio: ingressgateway   # use istio default ingress gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
