deployment/istio/istio API/istio-virtualService.yaml
# virtualservice определяем правила маршрутизации
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: stateful-todo
  namespace: stateful-todo
spec:
  hosts:
    - "*"
  gateways:
    - stateful-todo-istio-gateway
  http:
    - match:
        - uri:
            prefix: /tasks
      route:  # канареечное развертывание
        - destination:
            host: stateful-todo
            subset: v1
            port:
              number: 5000
          weight: 90  # 90% трафика
        - destination:
            host: stateful-todo
            subset: v2
            port:
              number: 5000
          weight: 10  # 10% трафика
